# operational-intelligence

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/oi-api/: Cargo.toml
crates/oi-api/src/: lib.rs
crates/oi-cli/: Cargo.toml
crates/oi-cli/src/: main.rs
crates/oi-connector/: Cargo.toml
crates/oi-connector/src/: lib.rs
crates/oi-core/: Cargo.toml
crates/oi-core/src/: audit.rs  evidence.rs  initiative.rs  lib.rs  workflow.rs
crates/oi-crew/: Cargo.toml
crates/oi-crew/src/: agents.rs  lib.rs  orchestrator.rs
crates/oi-eval/: Cargo.toml
crates/oi-eval/src/: lib.rs
crates/oi-hiring/: Cargo.toml
crates/oi-hiring/src/: lib.rs
crates/oi-llm/: Cargo.toml
crates/oi-llm/src/: lib.rs
crates/oi-memory/: Cargo.toml
crates/oi-memory/src/: lib.rs
crates/oi-tools/: Cargo.toml
crates/oi-tools/src/: lib.rs
docs/: ARCHITECTURE.md
examples/: sample-transcript.txt
