[package]
name = "oi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Operational Intelligence platform"
readme = "../../README.md"

[[bin]]
name = "oi"
path = "src/main.rs"

[dependencies]
oi-api = { workspace = true }
oi-connector = { workspace = true }
oi-core = { workspace = true }
oi-crew = { workspace = true }
oi-hiring = { workspace = true }
oi-llm = { workspace = true }
oi-memory = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
