[package]
name = "oi-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Factuality and faithfulness evaluation harness"

[dependencies]
oi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
