[package]
name = "oi-hiring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interview transcript analysis with evidence-traced hiring assessments"

[dependencies]
oi-core = { workspace = true }
oi-eval = { workspace = true }
oi-llm = { workspace = true }
oi-memory = { workspace = true }
oi-tools = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
